--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -1,4 +1,11 @@
 [versions]
+arrow = "1.1.6-alpha.88"
+suspendapp="0.4.0"
+hikari="5.0.1"
+cohort="1.7.3"
+ktor = "2.2.4"
+sqldelight="2.0.0-alpha05"
+postgresql="42.6.0"
 java-vavr = "0.10.4"
 kotlin-vavr = "0.10.2"
 jetbrains-annotations = "24.0.1"
@@ -66,13 +73,58 @@ detekt-gradle = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", v
 spotless-gradle = { module = "com.diffplug.spotless:spotless-plugin-gradle", version.ref = "spotless" }
 spotbugs-gradle = { module = "com.github.spotbugs.snom:spotbugs-gradle-plugin", version.ref = "spotbugs" }
 kover-gradle = { module = "org.jetbrains.kotlinx.kover:org.jetbrains.kotlinx.kover.gradle.plugin", version.ref = "kover" }
+arrow-core = { module = "io.arrow-kt:arrow-core", version.ref = "arrow" }
+arrow-fx = { module = "io.arrow-kt:arrow-fx-coroutines", version.ref = "arrow" }
+suspendapp = { module = "io.arrow-kt:suspendapp", version.ref = "suspendapp" }
+suspendapp-ktor = { module = "io.arrow-kt:suspendapp-ktor", version.ref = "suspendapp" }
+ktor-server-content-negotiation = { module = "io.ktor:ktor-server-content-negotiation", version.ref = "ktor" }
+ktor-server-core = { module = "io.ktor:ktor-server-core", version.ref = "ktor" }
+ktor-server-cors = { module = "io.ktor:ktor-server-cors", version.ref = "ktor" }
+ktor-server-defaultheaders = { module = "io.ktor:ktor-server-default-headers", version.ref = "ktor" }
+ktor-server-netty = { module = "io.ktor:ktor-server-netty", version.ref = "ktor" }
+ktor-server-tests = { module = "io.ktor:ktor-server-tests", version.ref = "ktor" }
+ktor-server-auth = { module = "io.ktor:ktor-server-auth", version.ref = "ktor" }
+ktor-server-auth-jwt = { module = "io.ktor:ktor-server-auth-jwt", version.ref = "ktor" }
+ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
+ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
+ktor-client-serialization = { module = "io.ktor:ktor-client-serialization", version.ref = "ktor" }
+ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
+ktor-serialization = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
+ktor-server-html = { module = "io.ktor:ktor-server-html-builder", version.ref = "ktor" }
+hikari = { module = "com.zaxxer:HikariCP", version.ref="hikari" }
+cohort-core = { module="com.sksamuel.cohort:cohort-core", version.ref="cohort" }
+cohort-ktor = { module="com.sksamuel.cohort:cohort-ktor2", version.ref="cohort" }
+cohort-hikari = { module="com.sksamuel.cohort:cohort-hikari", version.ref="cohort" }
+sqldelight-jdbc = { module = "app.cash.sqldelight:jdbc-driver", version.ref="sqldelight" }
+sqldelight-postgresql = { module = "app.cash.sqldelight:postgresql-dialect", version.ref="sqldelight" }
+postgresql = { module="org.postgresql:postgresql", version.ref="postgresql" }
 
 [bundles]
+arrow = ["arrow-core", "arrow-fx"]
+suspendapp = ["suspendapp", "suspendapp-ktor"]
+ktor-server = [
+    "ktor-server-core",
+    "ktor-server-cors",
+    "ktor-server-content-negotiation",
+    "ktor-server-defaultheaders",
+    "ktor-server-netty",
+    "ktor-server-auth",
+    "ktor-serialization"
+]
+ktor-client = [
+    "ktor-client-content-negotiation",
+    "ktor-client-serialization"
+]
 kotest = [
     "kotest-assertions-core",
     "kotest-frameworkEngine",
     "kotest-property",
     "kotest-runnerJUnit5",
+]
+cohort = [
+    "cohort-core",
+    "cohort-ktor",
+    "cohort-hikari"
 ]
 junit = ["junit-jupiter", "junit-engine"]
 vador = ["vador", "vador-matchers"]
@@ -89,3 +141,5 @@ lombok = { id = "io.freefair.lombok", version.ref = "lombok" }
 testLogger = { id = "com.adarshr.test-logger", version.ref = "testLogger" }
 moshix = { id = "dev.zacsweers.moshix", version.ref = "moshix" }
 kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
+ktor = { id = "io.ktor.plugin", version.ref = "ktor" }
+sqldelight = { id = "app.cash.sqldelight", version.ref = "sqldelight" } 
