--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@ org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.console=rich
 kotlin.code.style=official
+
+systemProp.org.gradle.unsafe.kotlin.assignment=true
