--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -129,6 +129,7 @@ cohort = [
 junit = ["junit-jupiter", "junit-engine"]
 vador = ["vador", "vador-matchers"]
 http4k = ["http4k-core", "http4k-client-apache", "http4k-format-moshi"]
+apache-log4j = ["log4j-api", "log4j-core", "log4j-slf4j2-impl"]
 kotlin-logging = ["kotlin-logging-jvm", "log4j-api", "log4j-core", "log4j-slf4j2-impl"]
 
 [plugins]
