--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -6,6 +6,9 @@ cohort="1.7.3"
 ktor = "2.3.0"
 sqldelight="2.0.0-SNAPSHOT"
 postgresql="42.6.0"
+rabbitmq-client = "5.17.0"
+ktor-rabbitmq = "0.4.0"
+jackson-kotlin = "2.15.0"
 java-vavr = "0.10.4"
 kotlin-vavr = "0.10.2"
 jetbrains-annotations = "24.0.1"
@@ -89,7 +92,8 @@ ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
 ktor-client-serialization = { module = "io.ktor:ktor-client-serialization", version.ref = "ktor" }
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
-ktor-serialization = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
+ktor-serialization-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
+ktor-serialization-cbor = { module = "io.ktor:ktor-serialization-kotlinx-cbor", version.ref = "ktor" }
 ktor-server-html = { module = "io.ktor:ktor-server-html-builder", version.ref = "ktor" }
 hikari = { module = "com.zaxxer:HikariCP", version.ref="hikari" }
 cohort-core = { module="com.sksamuel.cohort:cohort-core", version.ref="cohort" }
@@ -98,6 +102,9 @@ cohort-hikari = { module="com.sksamuel.cohort:cohort-hikari", version.ref="cohor
 sqldelight-jdbc = { module = "app.cash.sqldelight:jdbc-driver", version.ref="sqldelight" }
 sqldelight-postgresql = { module = "app.cash.sqldelight:postgresql-dialect", version.ref="sqldelight" }
 postgresql = { module="org.postgresql:postgresql", version.ref="postgresql" }
+rabbitmq-client = { module = "com.rabbitmq:amqp-client", version.ref = "rabbitmq-client" }
+ktor-rabbitmq = { module = "com.github.JUtupe:ktor-rabbitmq", version.ref = "ktor-rabbitmq" }
+jackson-kotlin = { module = "com.fasterxml.jackson.module:jackson-module-kotlin", version.ref = "jackson-kotlin"}
 
 [bundles]
 arrow = ["arrow-core", "arrow-fx"]
@@ -109,7 +116,8 @@ ktor-server = [
     "ktor-server-defaultheaders",
     "ktor-server-netty",
     "ktor-server-auth",
-    "ktor-serialization"
+    "ktor-serialization-json",
+    "ktor-serialization-cbor"
 ]
 ktor-client = [
     "ktor-client-content-negotiation",
