--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -93,7 +93,6 @@ ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
 ktor-client-serialization = { module = "io.ktor:ktor-client-serialization", version.ref = "ktor" }
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-serialization-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
-ktor-serialization-cbor = { module = "io.ktor:ktor-serialization-kotlinx-cbor", version.ref = "ktor" }
 ktor-server-html = { module = "io.ktor:ktor-server-html-builder", version.ref = "ktor" }
 hikari = { module = "com.zaxxer:HikariCP", version.ref="hikari" }
 cohort-core = { module="com.sksamuel.cohort:cohort-core", version.ref="cohort" }
@@ -116,8 +115,7 @@ ktor-server = [
     "ktor-server-defaultheaders",
     "ktor-server-netty",
     "ktor-server-auth",
-    "ktor-serialization-json",
-    "ktor-serialization-cbor"
+    "ktor-serialization-json"
 ]
 ktor-client = [
     "ktor-client-content-negotiation",
