- Fix Consumer apps - Upgrade Detekt 1.23.0
Signed-off-by: Gopal S Akshintala <gopala.akshintala@salesforce.com>

--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -14,7 +14,6 @@ java-vavr = "0.10.4"
 kotlin-vavr = "0.10.2"
 jetbrains-annotations = "24.0.1"
 typeTools = "0.6.3"
-kover = "0.7.1"
 kotlin = "1.9.0-Beta"
 moshix = "0.22.1"
 kotest = "5.6.2"
@@ -35,6 +34,7 @@ immutables = "2.9.3"
 mockito = "5.3.1"
 # Common dependencies
 junit = "5.9.3"
+kover = "0.7.1"
 detekt = "1.23.0"
 spotless = "6.19.0"
 apache-log4j = "2.20.0"
@@ -106,6 +106,7 @@ mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito"}
 # Gradle plugins
 kotlin-gradle = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 detekt-gradle = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "detekt" }
+# detekt-gradle = { module = "io.github.detekt.gradle.compiler-plugin:io.github.detekt.gradle.compiler-plugin.gradle.plugin", version.ref = "detekt" }
 spotless-gradle = { module = "com.diffplug.spotless:spotless-plugin-gradle", version.ref = "spotless" }
 spotbugs-gradle = { module = "com.github.spotbugs.snom:spotbugs-gradle-plugin", version.ref = "spotbugs" }
 kover-gradle = { module = "org.jetbrains.kotlinx.kover:org.jetbrains.kotlinx.kover.gradle.plugin", version.ref = "kover" }
